<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.a.dialog.ACustomDialog" />

        <variable
            name="gvm"
            type="com.face.util.GVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/a_bg_dialog2"
        android:orientation="vertical"
        android:paddingBottom="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/a_custom_face_swap"
            android:textColor="#EEF3FD"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/a_you_can_upload_any_video_pic_to_swap"
            android:textAppearance="@style/font_14"
            android:textColor="#EEF3FD" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/onVideo"
                app:layout_constraintTop_toTopOf="parent"
                bindSingleClick="@{()->handler.onVideo()}"
                android:layout_width="wrap_content"
                android:paddingHorizontal="36dp"
                android:layout_height="42dp"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:text="@string/a_target_video"
                android:background="@drawable/a_bg_line_r100"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:drawableStart="@drawable/img_custom_icon_video"
                app:layout_constraintEnd_toStartOf="@+id/onPhoto"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/onPhoto"
                bindSingleClick="@{()->handler.onPhoto()}"
                android:layout_width="wrap_content"
                android:paddingHorizontal="36dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/img_custom_icon_photo"
                android:text="@string/a_mian_picture_face"
                android:background="@drawable/a_bg_line_r100"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/onVideo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
