<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.a.activity.AMyFaceAllActivity" />

        <variable
            name="adapter"
            type="com.a.adapter.AMyAllFaceAdapter" />

        <variable
            name="vm"
            type="com.a.viewmodel.AMyAllFaceViewModel" />

        <variable
            name="gvm"
            type="com.face.util.GVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        bindAddVerticalPadding="@{true}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/a_settings_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTitle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                bindSingleClick="@{()->handler.finish()}"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:contentDescription="@string/a_settings_back"
                android:src="@mipmap/a_icon_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:gravity="center"
                android:text="@string/a_settings_faces"
                android:textAppearance="@style/font_18"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editTxt"
                bindVisible="@{vm.isSelect}"
                bindSingleClick="@{()->handler.onShowDelete()}"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:minWidth="48dp"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/a_settings_edit"
                android:textAppearance="@style/font_16"
                android:textColor="@color/colorPrimaryA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            bindRefreshListener="@{()->vm.getUserPics()}"
            bindRefreshing="@{vm.faceRefreshing}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    bindAdapter="@{adapter}"
                    bindData="@{vm.myFaceList}"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:paddingHorizontal="2.5dp"
                    android:paddingTop="2.5dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:spanCount="4"
                    tools:itemCount="12"
                    tools:listitem="@layout/item_amyallface_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/emptyFaces"
            bindVisible="@{vm.isNoData &amp;&amp; !vm.faceRefreshing &amp;&amp; !vm.loadFailed}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                bindSingleClick="@{()->handler.onAddClick()}"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/a_bg_faces_add"
                android:padding="17.5dp"
                android:contentDescription="@string/a_settings_add_face"
                android:src="@drawable/a_ic_faces_add" />

            <TextView
                android:id="@+id/tvAdd"
                bindSingleClick="@{()->handler.onAddClick()}"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/a_settings_add_face"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAiPoint"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/a_settings_face_hint"
                android:textAppearance="@style/font_12"
                android:textColor="#B2B2B2" />

        </LinearLayout>

        <TextView
            android:id="@+id/retry"
            bindSingleClick="@{()->vm.getUserPics()}"
            bindVisible="@{vm.loadFailed}"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/a_btn_w_r8"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="Retry"
            android:textAppearance="@style/font_16"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"
            app:layout_constraintWidth_min="100dp"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
